# RED-V_FE310_baremetal

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: board_bringup.md  cli_commands.md  driver_style.md  porting.md  test_matrix.md
examples/: README.md
examples/minimal_blink/: main.c
examples/uart_echo/: main.c
include/board/: board.h  fe310_redboard.h
include/cli/: cli_commands.h  cli_port.h  cli_print.h  test_registry.h  test_utils.h
include/drivers/: aon.h  clint.h  gpio.h  i2c.h  otp.h  plic.h  prci.h  pwm.h  rtc.h  spi.h  timer.h  uart.h  wdog.h
include/fe310/: fe310_bitfields.h  fe310_irq.h  fe310_memory_map.h  fe310_regs.h  mmio.h
linker/: fe310_flash.ld  fe310_ram.ld
openocd/: redv_redboard.cfg
scripts/: flash_jlink.sh  flash_openocd.sh  gdb_openocd.sh  run_cli_test.py  serial_cli.py
src/: main.c
src/board/: board.c  clock.c  pinmux.c
src/cli/: cli_commands.c  cli_print.c  embedded_cli_port.c
src/drivers/: aon.c  clint.c  gpio.c  i2c.c  otp.c  plic.c  pwm.c  rtc.c  spi.c  timer.c  uart.c  wdog.c
startup/: crt0.S  syscalls.c  trap.S  vectors.c
tests/: test_registry.c  test_utils.c
tests/aon/: test_aon.c
tests/gpio/: test_gpio.c
tests/i2c/: test_i2c.c
tests/otp/: test_otp.c
tests/plic/: test_plic.c
tests/pwm/: test_pwm.c
tests/rtc/: test_rtc.c
tests/spi/: test_spi.c
tests/timer/: test_timer.c
tests/uart/: test_uart.c
tests/wdog/: test_wdog.c
